fixing package cont. and bootstrapping

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-# Virtualenv
+# Python files 
 *.pyc
 .Python
 bin
@@ -6,6 +6,8 @@ lib
 include
 logfile
 **/*.pyc
+*.egg-info/*
+dist/*
 
 # Mac OS X custom attribute files
 .DS_Store
